[package]
name = "prismatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
json_comments = "0.2.2"
reqwest = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
