[package]
name = "prismatic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
json_comments = "0.2.2"
octocrab = { version = "0.38.0", optional = true }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
zip = "1.1.1"
bytes = "1.6.0"
async-recursion = "1.1.0"
scraper = { version = "0.19.0", optional = true }
rookie = { version = "0.5.1", optional = true }

[features]
default = ["github", "nexus"]
github = ["dep:octocrab"]
nexus = ["dep:scraper", "dep:rookie"]
